--- a/solution_86.ipynb
+++ b/solution_86.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,6 +58,29 @@
     "    lengths = [random.random() for j in range(3)]\n",
     "    actual = min(path_length(*edges) for edges in itertools.permutations(lengths))\n",
     "    expected = path_length(*sorted(lengths, reverse=True))\n",
+    "    assert abs(actual - expected) < 1e-10, (lengths, actual, expected)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def path_length_2(a: int, b: int, c: int) -> float:\n",
+    "    return math.sqrt(a**2 + (b + c)**2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for i in range(100):\n",
+    "    lengths = sorted([random.random() for j in range(3)], reverse=True)\n",
+    "    actual = path_length_2(*lengths)\n",
+    "    expected = path_length(*lengths)\n",
     "    assert abs(actual - expected) < 1e-10, (lengths, actual, expected)"
    ]
   },
